# qb_interface

./: .gitignore  API Project-21af541bdeea.json  README.md  a.py  alembic.ini  alternative.py  bandit.py  bandit_solver.py  cache_guesser_buzzer.py  cache_guesses.py  cache_qanta.py  cached_guesser_buzzer_client.py  client.html  client.py  context_polynomial_reward.py  db.py  download.py  expected_wins.py  figures.py  guesser_buzzer_client.py  keyboard_client.py  machine_client.py  new_server.py  noncontext_fixed_reward.py  noncontext_noisy_reward.py  plots.ipynb  preprocess.py  pyproject.toml  rematch.py  requirements.txt  server.py  setup.py  simulated_client.py  streamer.py  util.py  web_util.py
augment/: client.py  machine_client.py  mediator.py  new_figures.py  server.py  simulated_experiments.py  utils.py
broadcast/: client.py  client1.py  server.py
centaur/: alternative.py  bandit.py  client.py  download.py  expected_wins.py  figures.py  machine_client.py  mediator.py  new_figures.py  server.py  simulated_experiments.py  spring_novice_figures.py  utils.py
data/: neo_0.npz  sample_questions.json
figures/: cumulative_ew.json  explanation_cumulative_count.json  mediated_config_cumulative_count.json
fixtures/: curve_pipeline.pkl  elasticsearch_instance_of_answers.json  elasticsearch_instance_of_answers.txt
scripts/: cache_qanta.py  clear_records.py  create_tables.py  download.py  parse_pace.py  parse_spring_novice.py  update_answers.py
striatum/: __init__.py
web/: README.md  answers.0212.json  answers.0515.json  answers.json  consent_form.html  index.html
(+47 files in other folders)
