[tool.poetry]
name = "centaur"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.4.15"
Twisted = "17.9.0"
autobahn = "17.10.1"
contextualbandits = "^0.3.14"
bs4 = "^0.0.1"
psycopg2 = "^2.8.6"
nltk = "^3.6.2"
requests = "^2.25.1"
haikunator = "^2.1.0"
dill = "^0.3.3"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
